--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -8,4 +8,34 @@
     android:theme="@android:style/Theme.Holo"
     tools:context="iktaniyalol.ru.technicalassistant.Info">
 
+    <Button
+        android:id="@+id/resh3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="81dp"
+        android:width="1000dp"
+        android:height="100dp"
+        android:backgroundTint="@android:color/holo_purple"
+        android:text="@string/resh"
+        app:layout_constraintBottom_toTopOf="@+id/ur"
+        tools:layout_editor_absoluteX="0dp"
+        tools:targetApi="lollipop" />
+
+    <Button
+        android:id="@+id/ur"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/resh3"
+        android:layout_marginTop="44dp"
+        android:width="1000dp"
+        android:height="100dp"
+        android:backgroundTint="@android:color/holo_purple"
+        android:text="@string/per"
+        app:layout_constraintBottom_toTopOf="@+id/resh3"
+        tools:layout_editor_absoluteX="0dp"
+        tools:targetApi="lollipop" />
+
 </RelativeLayout>
