--- a/app/src/main/res/layout/activity_phys.xml
+++ b/app/src/main/res/layout/activity_phys.xml
@@ -9,31 +9,32 @@
     tools:context="iktaniyalol.ru.technicalassistant.Phys">
 
     <Button
-        android:id="@+id/resh3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_centerVertical="true"
-        android:width="1000dp"
-        android:height="100dp"
-        android:backgroundTint="@android:color/holo_purple"
-        android:text="@string/resh"
-        app:layout_constraintBottom_toTopOf="@+id/theor3"
-        tools:layout_editor_absoluteX="0dp"
-        tools:targetApi="lollipop" />
-
-    <Button
         android:id="@+id/theor3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/resh3"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="43dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="81dp"
         android:width="1000dp"
         android:height="100dp"
         android:backgroundTint="@android:color/holo_purple"
         android:text="@string/theor3"
         app:layout_constraintBottom_toTopOf="@+id/resh3"
+        tools:layout_editor_absoluteX="0dp"
+        tools:targetApi="lollipop" />
+
+    <Button
+        android:id="@+id/resh3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/theor3"
+        android:layout_marginTop="43dp"
+        android:width="1000dp"
+        android:height="100dp"
+        android:backgroundTint="@android:color/holo_purple"
+        android:text="@string/resh"
+        app:layout_constraintBottom_toTopOf="@+id/theor3"
         tools:layout_editor_absoluteX="0dp"
         tools:targetApi="lollipop" />
 
