--- a/app/src/main/res/layout/activity_math.xml
+++ b/app/src/main/res/layout/activity_math.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/sqrt"
+        android:layout_below="@+id/info"
         android:layout_marginTop="45dp"
         android:width="1000dp"
         android:height="100dp"
@@ -23,11 +23,11 @@
         tools:targetApi="lollipop" />
 
     <Button
-        android:id="@+id/sqrt"
+        android:id="@+id/info"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/theor2"
+        android:layout_below="@+id/phys"
         android:layout_marginTop="40dp"
         android:width="1000dp"
         android:height="100dp"
@@ -37,11 +37,11 @@
         tools:targetApi="lollipop" />
 
     <Button
-        android:id="@+id/theor2"
+        android:id="@+id/phys"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/theor5"
+        android:layout_below="@+id/math"
         android:layout_marginTop="39dp"
         android:width="1000dp"
         android:height="100dp"
@@ -51,7 +51,7 @@
         tools:targetApi="lollipop" />
 
     <Button
-        android:id="@+id/theor5"
+        android:id="@+id/math"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
