--- a/app/src/main/res/layout/activity_phys.xml
+++ b/app/src/main/res/layout/activity_phys.xml
@@ -17,7 +17,7 @@
         android:layout_marginTop="81dp"
         android:width="1000dp"
         android:height="100dp"
-        android:backgroundTint="@android:color/holo_purple"
+        android:backgroundTint="@color/colorPrimaryDark"
         android:text="@string/theor3"
         app:layout_constraintBottom_toTopOf="@+id/resh3"
         tools:layout_editor_absoluteX="0dp"
@@ -32,7 +32,7 @@
         android:layout_marginTop="43dp"
         android:width="1000dp"
         android:height="100dp"
-        android:backgroundTint="@android:color/holo_purple"
+        android:backgroundTint="@color/colorPrimaryDark"
         android:text="@string/resh"
         app:layout_constraintBottom_toTopOf="@+id/theor3"
         tools:layout_editor_absoluteX="0dp"
