--- a/app/src/main/res/layout/activity_theoral.xml
+++ b/app/src/main/res/layout/activity_theoral.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@android:color/darker_gray"
     android:theme="@android:style/Theme.Holo"
-    tools:context="iktaniyalol.ru.technicalassistant.TheorAlg">
+    tools:context="iktaniyalol.ru.technicalassistant.interfaces.TheorAlg">
 
 
 </RelativeLayout>
