--- a/app/src/main/res/layout/activity_korenstepen.xml
+++ b/app/src/main/res/layout/activity_korenstepen.xml
@@ -120,7 +120,7 @@
         android:layout_alignStart="@+id/textView5"
         android:layout_below="@+id/result"
         android:layout_marginTop="80dp"
-        android:width="65dp"
+        android:width="66dp"
         android:text="@string/koren"
         android:textColor="@android:color/holo_blue_dark"
         android:textSize="18sp" />
@@ -143,7 +143,8 @@
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/textView7"
         android:layout_alignBottom="@+id/textView7"
-        android:layout_toStartOf="@+id/result"
+        android:layout_marginStart="15dp"
+        android:layout_toEndOf="@+id/textView7"
         android:text="0"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="18sp" />
