--- a/app/src/main/res/layout/activity_korenstepen.xml
+++ b/app/src/main/res/layout/activity_korenstepen.xml
@@ -8,20 +8,6 @@
     android:theme="@android:style/Theme.Holo"
     tools:context="iktaniyalol.ru.technicalassistant.interfaces.KorenStepen">
 
-    <TextView
-        android:id="@+id/textView5"
-        style="@android:style/Widget.Holo.TextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/textView4"
-        android:layout_alignTop="@+id/result"
-        android:layout_marginTop="50dp"
-        android:width="1000dp"
-        android:height="30dp"
-        android:text="@string/infostep3"
-        android:textColor="@android:color/holo_blue_dark"
-        android:textSize="24sp" />
-
     <EditText
         android:id="@+id/input2"
         android:layout_width="match_parent"
@@ -94,7 +80,7 @@
         android:textSize="24sp" />
 
     <Button
-        android:id="@+id/result"
+        android:id="@+id/resultkr"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/input"
@@ -106,9 +92,9 @@
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/textView5"
-        android:layout_below="@+id/result"
-        android:layout_marginTop="50dp"
+        android:layout_alignStart="@+id/textView4"
+        android:layout_below="@+id/resultkr"
+        android:layout_marginTop="14dp"
         android:text="@string/step"
         android:textColor="@android:color/holo_blue_dark"
         android:textSize="18sp" />
@@ -117,16 +103,16 @@
         android:id="@+id/textView7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/textView5"
-        android:layout_below="@+id/result"
-        android:layout_marginTop="80dp"
+        android:layout_alignStart="@+id/textView6"
+        android:layout_below="@+id/textView6"
+        android:layout_marginTop="16dp"
         android:width="66dp"
         android:text="@string/koren"
         android:textColor="@android:color/holo_blue_dark"
         android:textSize="18sp" />
 
     <TextView
-        android:id="@+id/result1"
+        android:id="@+id/resultkr2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/textView6"
@@ -138,7 +124,7 @@
         android:textSize="18sp" />
 
     <TextView
-        android:id="@+id/result2"
+        android:id="@+id/resultkr1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/textView7"
