--- a/app/src/main/res/layout/activity_math.xml
+++ b/app/src/main/res/layout/activity_math.xml
@@ -9,7 +9,7 @@
 
 
     <Button
-        android:id="@+id/urav"
+        android:id="@+id/uravbutton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
