--- a/app/src/main/res/layout/activity_numbersys.xml
+++ b/app/src/main/res/layout/activity_numbersys.xml
@@ -8,4 +8,90 @@
     android:theme="@android:style/Theme.Holo"
     tools:context="iktaniyalol.ru.technicalassistant.interfaces.Numbertosystem">
 
+    <TextView
+        android:id="@+id/infotext"
+        style="@android:style/Widget.Holo.TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/input3"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="7dp"
+        android:width="1000dp"
+        android:height="30dp"
+        android:text="@string/infosystem"
+        android:textColor="@android:color/holo_blue_dark"
+        android:textSize="18sp" />
+
+    <TextView
+        android:id="@+id/infotext1"
+        style="@android:style/Widget.Holo.TextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/infotext"
+        android:layout_below="@+id/spinner"
+        android:layout_marginTop="12dp"
+        android:width="1000dp"
+        android:height="30dp"
+        android:text="@string/infosystem1"
+        android:textColor="@android:color/holo_blue_dark"
+        android:textSize="18sp" />
+
+    <Button
+        android:id="@+id/resultinfo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/spinner2"
+        android:layout_centerHorizontal="true"
+        android:text="@string/button2" />
+
+    <EditText
+        android:id="@+id/input3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="8dp"
+        android:ems="20"
+        android:hint="@string/textsys"
+        android:inputType="textCapCharacters|textPersonName"
+        android:labelFor="@+id/input1" />
+
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/infotext"
+        android:layout_marginTop="10dp"></Spinner>
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/infotext"
+        android:layout_below="@+id/resultinfo"
+        android:layout_marginTop="24dp"
+        android:text="@string/infosystem3"
+        android:textColor="@android:color/holo_blue_dark"
+        android:textSize="18sp" />
+
+    <TextView
+        android:id="@+id/resultkv1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/textView6"
+        android:layout_alignBottom="@+id/textView6"
+        android:layout_toStartOf="@+id/resultinfo"
+        android:text="0"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="18sp" />
+
+    <Spinner
+        android:id="@+id/spinner2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/infotext1"
+        android:layout_marginTop="15dp"></Spinner>
 </RelativeLayout>
