--- a/app/src/main/res/layout/activity_urav.xml
+++ b/app/src/main/res/layout/activity_urav.xml
@@ -79,7 +79,8 @@
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/textView6"
         android:layout_alignBottom="@+id/textView6"
-        android:layout_centerHorizontal="true"
+        android:layout_marginStart="19dp"
+        android:layout_toEndOf="@+id/textView2"
         android:text="0"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="18sp" />
