--- a/app/src/main/res/layout/activity_numbersys.xml
+++ b/app/src/main/res/layout/activity_numbersys.xml
@@ -69,10 +69,10 @@
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/infotext"
+        android:layout_alignStart="@+id/infotext1"
         android:layout_below="@+id/resultinfo"
-        android:layout_marginTop="24dp"
-        android:text="@string/infosystem3"
+        android:layout_marginTop="23dp"
+        android:text="@string/infostep3"
         android:textColor="@android:color/holo_blue_dark"
         android:textSize="18sp" />
 
@@ -82,7 +82,8 @@
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/textView6"
         android:layout_alignBottom="@+id/textView6"
-        android:layout_toStartOf="@+id/resultinfo"
+        android:layout_marginStart="14dp"
+        android:layout_toEndOf="@+id/textView6"
         android:text="0"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="18sp" />
