действия между числами в различных системах счисления готово

--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -18,7 +18,7 @@
         android:width="1000dp"
         android:height="100dp"
         android:backgroundTint="@color/colorPrimaryDark"
-        android:text="@string/resh"
+        android:text="@string/dey"
         app:layout_constraintBottom_toTopOf="@+id/sys"
         tools:layout_editor_absoluteX="0dp"
         tools:targetApi="lollipop" />
