--- a/app/src/main/res/layout/activity_numbersysdey.xml
+++ b/app/src/main/res/layout/activity_numbersysdey.xml
@@ -20,7 +20,7 @@
         android:width="1000dp"
         android:height="30dp"
         android:text="@string/infosystem"
-        android:textColor="@android:color/holo_blue_dark"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="18sp" />
 
     <TextView
@@ -34,7 +34,7 @@
         android:width="1000dp"
         android:height="30dp"
         android:text="@string/infosystem"
-        android:textColor="@android:color/holo_blue_dark"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="18sp" />
 
     <TextView
@@ -49,7 +49,7 @@
         android:width="1000dp"
         android:height="30dp"
         android:text="@string/deyinf"
-        android:textColor="@android:color/holo_blue_dark"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="18sp" />
 
     <Button
@@ -116,7 +116,7 @@
         android:layout_below="@+id/spinner6"
         android:layout_marginTop="5dp"
         android:text="@string/infostep3"
-        android:textColor="@android:color/holo_blue_dark"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="18sp" />
 
     <TextView
