--- a/app/src/main/res/layout/activity_urav.xml
+++ b/app/src/main/res/layout/activity_urav.xml
@@ -4,7 +4,7 @@
     android:id="@+id/Urav"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/darker_gray"
+    android:background="#edecec"
     android:theme="@android:style/Theme.Holo"
     tools:context="iktaniyalol.ru.technicalassistant.interfaces.Urav">
 
@@ -14,9 +14,15 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/input3"
+        android:layout_marginTop="20dp"
         android:ems="20"
         android:hint="@string/textur1"
-        android:inputType="numberDecimal|numberSigned" />
+        android:inputType="numberDecimal|numberSigned"
+        android:textColor="@android:color/black"
+        android:textColorHighlight="@android:color/darker_gray"
+        android:textColorHint="@android:color/black"
+        android:textColorLink="@android:color/darker_gray"
+        android:textStyle="italic" />
 
     <EditText
         android:id="@+id/input4"
@@ -24,9 +30,15 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/input2"
+        android:layout_marginTop="20dp"
         android:ems="20"
         android:hint="@string/textur2"
-        android:inputType="numberDecimal|numberSigned" />
+        android:inputType="numberDecimal|numberSigned"
+        android:textColor="@android:color/black"
+        android:textColorHighlight="@android:color/darker_gray"
+        android:textColorHint="@android:color/black"
+        android:textColorLink="@android:color/darker_gray"
+        android:textStyle="italic" />
 
     <EditText
         android:id="@+id/input3"
@@ -34,10 +46,16 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/textView"
+        android:layout_marginTop="20dp"
         android:ems="20"
         android:hint="@string/textur"
         android:inputType="numberDecimal|numberSigned"
-        android:labelFor="@+id/input1" />
+        android:labelFor="@+id/input1"
+        android:textColor="@android:color/black"
+        android:textColorHighlight="@android:color/darker_gray"
+        android:textColorHint="@android:color/black"
+        android:textColorLink="@android:color/darker_gray"
+        android:textStyle="normal|italic" />
 
     <TextView
         android:id="@+id/textView"
@@ -50,7 +68,8 @@
         android:width="1000dp"
         android:height="60dp"
         android:text="@string/infourav"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@android:color/holo_blue_light"
+        android:textStyle="bold"
         android:textSize="24sp" />
 
     <Button
@@ -60,6 +79,8 @@
         android:layout_below="@+id/input4"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp"
+        android:width="100dp"
+        android:background="@android:color/darker_gray"
         android:text="@string/button2" />
 
     <TextView
@@ -71,8 +92,9 @@
         android:layout_below="@+id/textView2"
         android:layout_marginTop="24dp"
         android:text="@string/textkv1"
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="18sp" />
+        android:textColor="@android:color/holo_blue_light"
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/resultkv1"
@@ -83,7 +105,7 @@
         android:layout_marginStart="14dp"
         android:layout_toEndOf="@id/textView6"
         android:text="0"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@android:color/black"
         android:textSize="18sp" />
 
     <TextView
@@ -94,8 +116,9 @@
         android:layout_below="@+id/resultkv"
         android:layout_marginTop="28dp"
         android:text="@string/textkv"
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="18sp" />
+        android:textColor="@android:color/holo_blue_light"
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/resultkv2"
@@ -106,7 +129,7 @@
         android:layout_marginStart="14dp"
         android:layout_toEndOf="@id/textView2"
         android:text="0"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@android:color/black"
         android:textSize="18sp" />
 
 </RelativeLayout>
