--- a/app/src/main/res/layout/activity_log.xml
+++ b/app/src/main/res/layout/activity_log.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/darker_gray"
+    android:background="#edecec"
     android:theme="@android:style/Theme.Holo"
     tools:context="iktaniyalol.ru.technicalassistant.interfaces.Logarifm">
 
@@ -19,7 +19,8 @@
         android:width="1000dp"
         android:height="60dp"
         android:text="@string/infolog"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@android:color/holo_blue_light"
+        android:textStyle="bold"
         android:textSize="24sp" />
 
     <Button
@@ -29,6 +30,8 @@
         android:layout_below="@+id/input1"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
+        android:width="100dp"
+        android:background="@android:color/darker_gray"
         android:text="@string/button2" />
 
     <EditText
@@ -37,10 +40,15 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/input"
-        android:layout_marginTop="14dp"
+        android:layout_marginTop="10dp"
         android:ems="20"
         android:hint="@string/inp"
-        android:inputType="numberDecimal|numberSigned" />
+        android:inputType="numberDecimal|numberSigned"
+        android:textColor="@android:color/black"
+        android:textColorHighlight="@android:color/darker_gray"
+        android:textColorHint="@android:color/black"
+        android:textColorLink="@android:color/darker_gray"
+        android:textStyle="italic" />
 
     <EditText
         android:id="@+id/input"
@@ -51,7 +59,12 @@
         android:ems="20"
         android:hint="@string/text1"
         android:inputType="numberDecimal|numberSigned"
-        android:labelFor="@+id/input1" />
+        android:labelFor="@+id/input1"
+        android:textColor="@android:color/black"
+        android:textColorHighlight="@android:color/darker_gray"
+        android:textColorHint="@android:color/black"
+        android:textColorLink="@android:color/darker_gray"
+        android:textStyle="italic" />
 
     <TextView
         android:id="@+id/textView7"
@@ -62,7 +75,8 @@
         android:layout_marginTop="96dp"
         android:width="92dp"
         android:text="@string/Log"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@android:color/holo_blue_light"
+        android:textStyle="bold"
         android:textSize="18sp" />
 
     <TextView
@@ -74,7 +88,7 @@
         android:layout_marginStart="15dp"
         android:layout_toEndOf="@+id/textView7"
         android:text="0"
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@android:color/black"
         android:textSize="18sp" />
 
 </RelativeLayout>
