--- a/app/src/main/res/layout/activity_numbersys.xml
+++ b/app/src/main/res/layout/activity_numbersys.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/darker_gray"
+    android:background="#edecec"
     android:theme="@android:style/Theme.Holo"
     tools:context="iktaniyalol.ru.technicalassistant.interfaces.Numbertosystem">
 
@@ -16,12 +16,13 @@
         android:layout_alignParentStart="true"
         android:layout_below="@+id/input3"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="7dp"
+        android:layout_marginTop="20dp"
         android:width="1000dp"
         android:height="30dp"
         android:text="@string/infosystem"
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="18sp" />
+        android:textColor="@android:color/holo_blue_light"
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/infotext1"
@@ -30,12 +31,13 @@
         android:layout_height="wrap_content"
         android:layout_alignStart="@+id/infotext"
         android:layout_below="@+id/spinner"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="20dp"
         android:width="1000dp"
         android:height="30dp"
         android:text="@string/infosystem1"
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="18sp" />
+        android:textColor="@android:color/holo_blue_light"
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
     <Button
         android:id="@+id/resultinfo"
@@ -43,6 +45,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/spinner2"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:width="100dp"
+        android:background="@android:color/darker_gray"
         android:text="@string/button2" />
 
     <EditText
@@ -51,11 +56,16 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="20dp"
         android:ems="20"
         android:hint="@string/textsys"
-        android:inputType="textCapCharacters|textPersonName"
-        android:labelFor="@+id/input1" />
+        android:inputType="textCapCharacters"
+        android:labelFor="@+id/input1"
+        android:textColor="@android:color/black"
+        android:textColorHighlight="@android:color/darker_gray"
+        android:textColorHint="@android:color/black"
+        android:textColorLink="@android:color/darker_gray"
+        android:textStyle="italic" />
 
     <Spinner
         android:id="@+id/spinner"
@@ -73,8 +83,9 @@
         android:layout_below="@+id/resultinfo"
         android:layout_marginTop="23dp"
         android:text="@string/infostep3"
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="18sp" />
+        android:textColor="@android:color/holo_blue_light"
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/resultkv1"
@@ -85,8 +96,7 @@
         android:layout_marginStart="14dp"
         android:layout_toEndOf="@+id/textView6"
         android:text="0"
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="18sp" />
+        android:textColor="@android:color/black" />
 
     <Spinner
         android:id="@+id/spinner2"
@@ -94,5 +104,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/infotext1"
-        android:layout_marginTop="15dp"></Spinner>
+        android:layout_marginTop="10dp">
+
+    </Spinner>
 </RelativeLayout>
