--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:orientation="vertical">
 
         <Button
-            android:id="@+id/uravbutton"
+            android:id="@+id/math"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="45dp"
@@ -21,12 +21,12 @@
             android:height="100dp"
             android:textColor="@android:color/black"
             android:backgroundTint="@android:color/holo_blue_light"
-            android:text="@string/uravnenie"
+            android:text="@string/math"
             tools:layout_editor_absoluteX="0dp"
             tools:targetApi="lollipop" />
 
         <Button
-            android:id="@+id/sqrt"
+            android:id="@+id/info"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
@@ -34,12 +34,11 @@
             android:height="100dp"
             android:textColor="@android:color/black"
             android:backgroundTint="@android:color/holo_blue_light"
-            android:text="@string/sqrt"
+            android:text="@string/info"
             tools:layout_editor_absoluteX="0dp"
             tools:targetApi="lollipop" />
-
         <Button
-            android:id="@+id/logarif"
+            android:id="@+id/test"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
@@ -47,46 +46,7 @@
             android:height="100dp"
             android:textColor="@android:color/black"
             android:backgroundTint="@android:color/holo_blue_light"
-            android:text="@string/theor"
-            tools:layout_editor_absoluteX="0dp"
-            tools:targetApi="lollipop" />
-
-        <Button
-            android:id="@+id/resh4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:width="1000dp"
-            android:height="100dp"
-            android:textColor="@android:color/black"
-            android:backgroundTint="@android:color/holo_blue_light"
-            android:text="@string/dey"
-            tools:layout_editor_absoluteX="0dp"
-            tools:targetApi="lollipop" />
-
-        <Button
-            android:id="@+id/sys"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:width="1000dp"
-            android:height="100dp"
-            android:textColor="@android:color/black"
-            android:backgroundTint="@android:color/holo_blue_light"
-            android:text="@string/per"
-            tools:layout_editor_absoluteX="0dp"
-            tools:targetApi="lollipop" />
-
-        <Button
-            android:id="@+id/theor2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:width="1000dp"
-            android:height="100dp"
-            android:textColor="@android:color/black"
-            android:backgroundTint="@android:color/holo_blue_light"
-            android:text="@string/theor2"
+            android:text="@string/test"
             tools:layout_editor_absoluteX="0dp"
             tools:targetApi="lollipop" />
 
