--- a/app/src/main/res/layout/activity_numbersys.xml
+++ b/app/src/main/res/layout/activity_numbersys.xml
@@ -46,9 +46,9 @@
         android:layout_below="@+id/spinner2"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
-        android:width="100dp"
-        android:background="@android:color/darker_gray"
-        android:text="@string/button2" />
+        android:backgroundTint="@android:color/darker_gray"
+        android:text="@string/button2"
+        tools:targetApi="lollipop" />
 
     <EditText
         android:id="@+id/input3"
@@ -70,10 +70,11 @@
     <Spinner
         android:id="@+id/spinner"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/infotext"
-        android:layout_marginTop="10dp"></Spinner>
+        android:layout_marginTop="10dp"
+        android:theme="@style/AppTheme"></Spinner>
 
     <TextView
         android:id="@+id/textView6"
@@ -101,10 +102,11 @@
     <Spinner
         android:id="@+id/spinner2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/infotext1"
-        android:layout_marginTop="10dp">
+        android:layout_marginTop="10dp"
+        android:theme="@style/AppTheme">
 
     </Spinner>
 </RelativeLayout>
