--- a/app/src/main/res/layout/activity_numbersysdey.xml
+++ b/app/src/main/res/layout/activity_numbersysdey.xml
@@ -61,9 +61,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/spinner3"
         android:layout_centerHorizontal="true"
-        android:background="@android:color/darker_gray"
-        android:width="100dp"
-        android:text="@string/button2" />
+        android:backgroundTint="@android:color/darker_gray"
+        android:text="@string/button2"
+        tools:targetApi="lollipop" />
 
     <EditText
         android:id="@+id/input3"
@@ -102,30 +102,33 @@
     <Spinner
         android:id="@+id/spinner5"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="35dp"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/infotext"
-        android:layout_marginTop="9dp">
+        android:layout_marginTop="9dp"
+        android:theme="@style/AppTheme">
 
     </Spinner>
 
     <Spinner
         android:id="@+id/spinner4"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="35dp"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/infotext4"
-        android:layout_marginTop="9dp">
+        android:layout_marginTop="9dp"
+        android:theme="@style/AppTheme">
 
     </Spinner>
 
     <Spinner
         android:id="@+id/spinner3"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="35dp"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/infotext2"
-        android:layout_marginTop="9dp">
+        android:layout_marginTop="9dp"
+        android:theme="@style/AppTheme">
 
     </Spinner>
 
@@ -156,8 +159,9 @@
     <Spinner
         android:id="@+id/spinner6"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="35dp"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/resultinfo" />
+        android:layout_below="@+id/resultinfo"
+        android:theme="@style/AppTheme" />
 
 </RelativeLayout>
