линейные графики готовы

--- a/app/src/main/res/layout/activity_graph.xml
+++ b/app/src/main/res/layout/activity_graph.xml
@@ -1,17 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#edecec"
-    android:theme="@android:style/Theme.Holo"
-    tools:context="iktaniyalol.ru.technicalassistant.interfaces.Graphic"
-    android:orientation="vertical">
-
+    android:orientation="vertical"
+    tools:context="Graphic">
     <com.jjoe64.graphview.GraphView
-        android:id="@+id/graph"
         android:layout_width="match_parent"
-        android:layout_height="200dp" />
-
-</RelativeLayout>
+        android:layout_height="match_parent"
+        android:id="@+id/graph" />
+</LinearLayout>
